--- a/data/styles.css
+++ b/data/styles.css
@@ -61,6 +61,10 @@
 ._文本段落 {
   text-align:left;
 }
+.text_field {
+  color:#000000;
+  text-align:left;
+}
 .text_area {
   color:#000000;
   text-align:left;
